All_Component_DX/force-app/main/default/objects/Service_Contract_Sites__c/Service_Contract_Sites__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Customer sites entitled by this service contract.</description>
    <label>Covered Location</label>
    <nameField>
        <displayFormat>SCSN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>