All_Component_DX/force-app/main/default/objects/Service_Contract_Sites__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any additional information about entitlement on this site</description>
    <inlineHelpText>Additional information about entitlement on this site</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>