All_Component_DX/force-app/main/default/objects/Service_Contract_Sites__c/fields/Number_of_Service_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Orders__c</fullName>
    <description>Number of work orders allowed for this customer location. Not used</description>
    <label>Number of Service Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>