All_Component_DX/force-app/main/default/objects/Service_Contract_Sites__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the location. Is a lookup to an existing location record in ServiceMax</description>
    <inlineHelpText>Name of the site. Is a lookup to an existing site record in ServiceMax</inlineHelpText>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>R00N70000001hzdCEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>